# optimization-lab

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE-DOCS  README.md
.github/workflows/: deploy-book.yml
book/: book.toml
book/src/: SUMMARY.md  appendix-governor.md  appendix-p-e-cores.md  chapter-01-setup.md  chapter-02-baseline.md  chapter-03-low-hanging-fruit.md  chapter-04-embarrassingly-parallel.md  introduction.md  reference.md
cmake/: BuildTypeBenchmark.cmake  BuildTypeCoverage.cmake  BuildTypeSanitizer.cmake  ClangTools.cmake  StrictBuildMode.cmake
cmd/: CMakeLists.txt  main.c
include/rot13/: rot13.h
results/: baseline_hyperfine.json  baseline_perf.txt  baseline_with_bench_flag.txt  governor_experiment.csv  lut_hyperfine.json  lut_perf.txt  simd_hyperfine.json  simd_mmap_hyperfine.json  simd_mmap_perf.txt  simd_perf.txt
src/: CMakeLists.txt  impls.h  rot13_lut.c  rot13_registry.c  rot13_scalar.c  rot13_simd.c  rot13_table.c
test/: CMakeLists.txt  test_rot13.c
tools/: bw-probe.c  bw-probe.sh  flame.sh  gen-data.py  governor-experiment.sh  plot-results.py  run-perf.sh
